Completed Final Structure

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -30,7 +30,7 @@
         <h1>PREDICT AND PREVENT</h1>
         <p>A one stop solution to predict epidemic outbreak and take measures to curb it at an early stage or take safety measures for protection against it.</p>
         
-         <a href="/adminDashboard"> <button type="button" class="btn btn-success btn-lg nextbuttons" data-bs-toggle="modal" data-bs-target="#login">
+         <a href="/adminDashboard_malaria"> <button type="button" class="btn btn-success btn-lg nextbuttons" data-bs-toggle="modal" data-bs-target="#login">
             MY DASHBOARD
           </button></a>
     </div>
