--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,9 +4,12 @@
 
 {% block content %}
 
-    <!-- NavBar -->
-    
-    <nav class="navbar onlynav navbar-expand-lg ">
+   
+   
+      
+
+      {%if state in ['malaria','hepatitis','flu']%}
+      <nav class="navbar onlynav navbar-expand-lg ">
         
         <a class="navbar-brand" href="#"><img class="banner-logo" src="static/images/Logo.png" alt=""></a>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -14,6 +17,41 @@
               <!-- <li class="nav-item">
                   <a class="nav-link " aria-current="page" href="#main-page">Home</a>
                 </li> -->
+                <li>
+                  <div class="dropdown">
+                    <p class="dropbtn">Check the Required Medicines</p>
+                    <div class="dropdown-content">
+                      {% if state=="malaria"%}
+                      <p>Malaria</p>
+                      <ul>
+                        <li>Atovaquone-proguanil (Malarone)</li>
+                        <li>Quinine sulfate (Qualaquin)</li>
+                        <li>Doxycycline (Oracea, Vibramycin, others)</li>
+                        <li> Primaquine phosphate</li>
+                        
+                      </ul>
+                      {% elif state=="hepatitis"%}
+                      <p>Hepatitis</p>
+                      <ul>
+                        <li>Entecavir(Baraclude)  </li>
+                        <li>Tenofovir(Viread)  </li>
+                        <li>Lamivudine(Epivir)  </li>
+                        <li>Adefovir (Hepsera)  </li>
+                        <li>Telbivudine (Tyzeka)  </li>
+                      </ul>
+                      {% elif state=="flu"%}
+                      <p>Influenza</p>
+                      <ul>
+                        <li>Oseltamivir phosphate(Tamiflu)</li>
+                        <li>Zanamivir(Relenza)</li>
+                        <li>Peramivir(Rapivab)</li>
+                        <li>Baloxavir Marboxil (Xofluza</li>
+                      </ul>
+                      {%endif%}
+                      
+                    </div>
+                  </div>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link " aria-current="page" href="/loggedin">Back to Home Page</a>
                 </li>
@@ -35,9 +73,19 @@
             </button>
             <div class="collapse show" id="home-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="/malaria" class="link-dark rounded">Malaria</a></li>
-                <li><a href="#" class="link-dark rounded">Hepatitis</a></li>
-                <li><a href="#" class="link-dark rounded">Influenza</a></li>
+                {%if state=='malaria'%}
+                <li><a href="/adminDashboard_malaria" class="link-dark rounded selected">Malaria</a></li>
+                <li><a href="/adminDashboard_hepatitis" class="link-dark rounded">Hepatitis</a></li>
+                <li><a href="/adminDashboard_flu" class="link-dark rounded">Influenza</a></li>
+                {%elif state=='hepatitis'%}
+                <li><a href="/adminDashboard_malaria" class="link-dark rounded ">Malaria</a></li>
+                <li><a href="/adminDashboard_hepatitis" class="link-dark rounded selected">Hepatitis</a></li>
+                <li><a href="/adminDashboard_flu" class="link-dark rounded">Influenza</a></li>
+                {%elif state=='flu'%}
+                <li><a href="/adminDashboard_malaria" class="link-dark rounded ">Malaria</a></li>
+                <li><a href="/adminDashboard_hepatitis" class="link-dark rounded">Hepatitis</a></li>
+                <li><a href="/adminDashboard_flu" class="link-dark rounded selected">Influenza</a></li>
+                {%endif%}
               </ul>
             </div>
           </li>
@@ -48,37 +96,199 @@
             </button>
             <div class="collapse" id="dashboard-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a href="#" class="link-dark rounded">All</a></li>
-                <li><a href="#" class="link-dark rounded">Pharmacies</a></li>
-                <li><a href="#" class="link-dark rounded">Health Centers</a></li>
-                <li><a href="#" class="link-dark rounded">Hospitals</a></li>
+                
+                  
+                <li><a href="/all" class="link-dark rounded">All</a></li>
+             
+                <li><a href="/pharma" class="link-dark rounded">Pharmacies</a></li>
+                <li><a href="/healthcenter" class="link-dark rounded">Health Centers</a></li>
+                <li><a href="/hospital" class="link-dark rounded">Hospitals</a></li>
               </ul>
             </div>
           </li>
           
         </ul>
       </div>
-      <div class="card cardgraph" style="width: 18rem;">
-        
+      
+   
+      <div class="data">
+
+      <div class="card cardgraph" >
+       
         <div class="card-body cg-body">
-          <h5 class="card-title cg-title"><br><br></h5>
+          <h5 class="card-title cg-title">WEEKLY FORECASTS</h5>
           <p class="card-text">
             
             </p>
           
         </div>
       </div>
-      <div class="estimate " >
-          <label for="date" class="datepickhead"><strong>SELECT THE DATE</strong> </label>
-          <input class=" datepick form-control" type="date" name="date" id="" placeholder="DD-MM-YYYY">
-          <a href="/adminDashboard"> <button type="button" class="btn btn-success btn-lg nextbuttons estimatebutton" data-bs-toggle="modal" data-bs-target="#login">
-            ESTIMATE THE NUMBER OF CASES
-          </button></a>
-          <h1 class=" cases"> {{cases}}</h1>
+      <div class="numeric-data">
+        <div class="card numeric-card" >
+       
+          <div class="card-body cm-body">
+            <h5 class="card-title cm-title">Week 1</h5>
+            <p class="card-text">
+              
+              </p>
+            
+          </div>
+        </div>
+        <div class="card numeric-card " >
+       
+          <div class="card-body cm-body">
+            <h5 class="card-title cm-title ">Week 2</h5>
+            <p class="card-text">
+              
+              </p>
+            
+          </div>
+        </div>
+        <div class="card numeric-card" >
+       
+          <div class="card-body cm-body">
+            <h5 class="card-title  cm-title">Week 3</h5>
+            <p class="card-text ">
+              
+              </p>
+            
+          </div>
+        </div>
+        <div class="card numeric-card" >
+       
+          <div class="card-body cm-body">
+            <h5 class="card-title  cm-title">Week 4</h5>
+            <p class="card-text">
+              
+              </p>
+            
+          </div>
+        </div>
+        <div class="card numeric-card" >
+       
+          <div class="card-body cm-body">
+            <h5 class="card-title  cm-title">Week 5</h5>
+            <p class="card-text">
+            
+              </p>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+      {%elif state in ['All','pharma','hospital','healthcenter']%}
+      <nav class="navbar onlynav navbar-expand-lg ">
+        
+        <a class="navbar-brand" href="#"><img class="banner-logo" src="static/images/Logo.png" alt=""></a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <!-- <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href="#main-page">Home</a>
+                </li> -->
+                
+                <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href="/loggedin">Back to Home Page</a>
+                </li>
+                
+          </ul>
+        </div>
+    </nav>
+   <div class="dashboard">
+    <div class="flex-shrink-0 p-3 bg-white sidebarmenu" style="width: 255px;">
+        <a class="navbar-brand" href="#"><img class="banner-logo" src="static/images/Logo.png" alt=""></a>
+        <br>
+        <br>
+        <p>My Dashboard</p>
+        <hr>
+        <ul class="list-unstyled ps-0">
+          <li class="mb-1">
+            <button class="btn btn-toggle align-items-center rounded collapsed " data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
+              Estimate Cases
+            </button>
+            <div class="collapse show" id="home-collapse">
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="/adminDashboard_malaria" class="link-dark rounded">Malaria</a></li>
+                <li><a href="/adminDashboard_hepatitis" class="link-dark rounded">Hepatitis</a></li>
+                <li><a href="/adminDashboard_flu" class="link-dark rounded">Influenza</a></li>
+              </ul>
+            </div>
+          </li>
+          <hr>
+          <li class="mb-1">
+            <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="true">
+              Send Alerts
+            </button>
+            <div class="collapse" id="dashboard-collapse">
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                
+                {%if state=='All'%}
+                <li><a href="/all" class="link-dark rounded selected">All</a></li>
+             
+                <li><a href="/pharma" class="link-dark rounded">Pharmacies</a></li>
+                <li><a href="/healthcenter" class="link-dark rounded">Health Centers</a></li>
+                <li><a href="/hospital" class="link-dark rounded">Hospitals</a></li>
+                {%elif state=='pharma'%}
+                <li><a href="/all" class="link-dark rounded ">All</a></li>
+             
+                <li><a href="/pharma" class="link-dark rounded selected">Pharmacies</a></li>
+                <li><a href="/healthcenter" class="link-dark rounded">Health Centers</a></li>
+                <li><a href="/hospital" class="link-dark rounded">Hospitals</a></li>
+                {%elif state=='hospital'%}
+                <li><a href="/all" class="link-dark rounded ">All</a></li>
+             
+                <li><a href="/pharma" class="link-dark rounded">Pharmacies</a></li>
+                <li><a href="/healthcenter" class="link-dark rounded">Health Centers</a></li>
+                <li><a href="/hospital" class="link-dark rounded selected">Hospitals</a></li>
+                {%elif state=='healthcenter'%}
+                <li><a href="/all" class="link-dark rounded">All</a></li>
+             
+                <li><a href="/pharma" class="link-dark rounded">Pharmacies</a></li>
+                <li><a href="/healthcenter" class="link-dark rounded selected">Health Centers</a></li>
+                <li><a href="/hospital" class="link-dark rounded">Hospitals</a></li>
+                {%endif%}
+              </ul>
+            </div>
+          </li>
           
+        </ul>
       </div>
       
+   
+      
+      <div class="alerts">
+      <form class="msg-alert" action="" method="post">
+        
+        {{form.submit_send(class="btn btn-success btn-lg sendbutton")}}
+      </form>
+      <table class="alert-org">
+        <tr class="title">
+          <th>Organization ID</th>
+          <th>Member Name</th>
+          <th>Member Contact</th>
+          <th>Category</th>
+          <th>Organization Name</th>
+          <th>Organization Address</th>
+        </tr>
+        {% for i,n,p,c,on,oa in content%}
+        <tr>
+          <td>{{i}}</td>
+          <td>{{n}}</td>
+          <td>{{p}}</td>
+          <td>{{c}}</td>
+          <td>{{on}}</td>
+          <td>{{oa}}</td>
+
+
+        </tr>
+        {%endfor%}
+      </table>
+      {%endif%}
     </div>
+      
+      
+    
     
 
     {% endblock%}
