--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -11,4 +11,8 @@
     
   </div>
 
+  <div class="gohome">
+    <a href="/"><button type="button" class="btn btn-info btn-lg homebutton">Back to Home</button></a>
+  </div>
+
 {%endblock %}
