--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,6 +22,18 @@
           </ul>
         </div>
     </nav>
+    <div id="hideme" class="{{notif}}">
+      
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        
+        {% for message in messages %}
+          {{message}}
+        {% endfor %}
+        
+      {% endif %}
+    {% endwith %}
+    </div>
    
 
     <!-- Description -->
@@ -71,8 +83,13 @@
                     
                   </div>
                   <div class="modal-footer">
+                    <div id="loader" class="loader">
+
+                    </div>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    {{form.submit4(class="btn btn-primary log")}}
+                    {{form.submit4(class="btn btn-primary log", onclick="document.getElementById('loader').style.display = 'block' ;")}}
+                    
+                    
                   </div>
               </form>
                 </div>
