--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -120,11 +120,11 @@
           <p  class="card-text">
             <div class="prob">
               {% if state=='malaria'%}
-            The probability of Malaria Epidemic Occurence is: {{prob}}
+            The probability of Malaria Epidemic Occurence based on non-clinical parameters is: {{prob}}
             {% elif state=='hepatitis'%}
-            The probability of Hepatitis Epidemic Occurence is: {{prob}}
+            The probability of Hepatitis Epidemic Occurence based on non-clinical parameters is: {{prob}}
             {% elif state=='flu'%}
-            The probability of Influenza Epidemic Occurence is: {{prob}}
+            The probability of Influenza Epidemic Occurence based on non-clinical parameters is: {{prob}}
 
             {%endif%}
           </div>
