Ready for Deployment

--- a/templates/home.html
+++ b/templates/home.html
@@ -169,7 +169,7 @@
         <div class="col-lg-6 teampic">
             
             <div class="team-row">
-                <img class="tpic " src="static/images/JS.png" alt="">
+                <img class="tpic " src="static/images/abhishek.PNG" alt="">
                 
                 <br>
                 
